Se codifico el recibo nomina activyty

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">PRE-EXAMEN</string>
 
-    <string name="nombre">Angel Sanchez</string>
+    <string name="nombre">Salma</string>
 </resources>
